ci(CircleCI): correct Ci config indentation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,8 +232,7 @@ jobs:
       - restore_cache:
           keys:
             # Specify the unique identifier for the cache.
-            - PyDynamic-v1-{{ checksum
-            - "PyDynamic/requirements/requirements-py38.txt" }}-{{ checksum "PyDynamic/requirements/dev-requirements-py38.txt" }}
+            - PyDynamic-v1-{{ checksum "PyDynamic/requirements/requirements-py38.txt" }}-{{ checksum "PyDynamic/requirements/dev-requirements-py38.txt" }}
             # Fallback to using the latest cache if no exact match is found.
             - PyDynamic-v1
 
