--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,62 +17,62 @@ executors:
 workflows:
   build_and_test_virtual_environments:
     jobs:
-      - build_and_test_conda_env
-      - build_and_test_venv_env
+      #- build_and_test_conda_env
+      #- build_and_test_venv_env
       - test_against_conda:
           name: test_agentMET4FOF_ml_against_conda
           submodule: tutorials/agentMET4FOF_ml
-      - test_against_conda:
-          name: test_agentMET4FOF_anomaly_detection_against_conda
-          submodule: tutorials/agentMET4FOF_anomaly_detection
-      - test_against_conda:
-          name: test_time-series-buffer_against_conda
-          submodule: time-series-buffer
-      - test_against_conda:
-          name: test_time-series-metadata_against_conda
-          submodule: time-series-metadata
-      - test_against_conda:
-          name: test_agentMET4FOF_sensors_against_conda
-          submodule: tutorials/agentMET4FOF_sensors
-      - test_PyDynamic
-      - test_agentMET4FOF
-      - test_agentMET4FOF_ml
-      - test_agentMET4FOF_anomaly_detection
-      - test_time-series-buffer
-      - test_time-series-metadata
-      - test_agentMET4FOF_sensors
-      - preview_release:
-          # Test the 'release' job to avoid trouble when Pull Requests get merged and
-          # to preview publishing actions and the new changelog.
-          requires:
-              - build_and_test_conda_env
-              - build_and_test_venv_env
-              - test_agentMET4FOF_sensors_against_conda
-              - test_PyDynamic
-              - test_agentMET4FOF
-              - test_agentMET4FOF_ml
-              - test_agentMET4FOF_anomaly_detection
-              - test_time-series-buffer
-              - test_time-series-metadata
-              - test_agentMET4FOF_sensors
-      - confirm_previewed_release_actions:
-          # This job allows for checking that the release we will create in the
-          # next step actually is the desired release, by observing the result of
-          # preview_release.
-          type: approval
-          requires:
-            - preview_release
-          filters:
-            branches:
-              # This assures the job only being triggered on branch master.
-              only: /master/
-      - release:
-          # Job to potentially create a release based on python-semantic-release's
-          # decision and publish it on GitHub and Zenodo. This requires manual
-          # approval in the previous step, which is only triggered on branch master,
-          # thus this job here is triggered only on master as well.
-          requires:
-              - confirm_previewed_release_actions
+      #- test_against_conda:
+      #    name: test_agentMET4FOF_anomaly_detection_against_conda
+      #    submodule: tutorials/agentMET4FOF_anomaly_detection
+      #- test_against_conda:
+      #    name: test_time-series-buffer_against_conda
+      #    submodule: time-series-buffer
+      #- test_against_conda:
+      #    name: test_time-series-metadata_against_conda
+      #    submodule: time-series-metadata
+      #- test_against_conda:
+      #    name: test_agentMET4FOF_sensors_against_conda
+      #    submodule: tutorials/agentMET4FOF_sensors
+      #- test_PyDynamic
+      #- test_agentMET4FOF
+      #- test_agentMET4FOF_ml
+      #- test_agentMET4FOF_anomaly_detection
+      #- test_time-series-buffer
+      #- test_time-series-metadata
+      #- test_agentMET4FOF_sensors
+      #- preview_release:
+      #    # Test the 'release' job to avoid trouble when Pull Requests get merged and
+      #    # to preview publishing actions and the new changelog.
+      #    requires:
+      #        - build_and_test_conda_env
+      #        - build_and_test_venv_env
+      #        - test_agentMET4FOF_sensors_against_conda
+      #        - test_PyDynamic
+      #        - test_agentMET4FOF
+      #        - test_agentMET4FOF_ml
+      #        - test_agentMET4FOF_anomaly_detection
+      #        - test_time-series-buffer
+      #        - test_time-series-metadata
+      #        - test_agentMET4FOF_sensors
+      #- confirm_previewed_release_actions:
+      #    # This job allows for checking that the release we will create in the
+      #    # next step actually is the desired release, by observing the result of
+      #    # preview_release.
+      #    type: approval
+      #    requires:
+      #      - preview_release
+      #    filters:
+      #      branches:
+      #        # This assures the job only being triggered on branch master.
+      #        only: /master/
+      #- release:
+      #    # Job to potentially create a release based on python-semantic-release's
+      #    # decision and publish it on GitHub and Zenodo. This requires manual
+      #    # approval in the previous step, which is only triggered on branch master,
+      #    # thus this job here is triggered only on master as well.
+      #    requires:
+      #        - confirm_previewed_release_actions
 
 commands:
   # Reusable command to prepare the environment for testing.
