--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -235,7 +235,7 @@ commands:
           pytest -v --junitxml=test-results/junit.xml \
           << parameters.submodule >> > test-results/pytest.log
 
-    - store_test_results:
+    - store_test_artifacts_and_results:
         submodule: << parameters.submodule >>
 
   store_test_artifacts_and_results:
