ci(CirceCI): debug uninstallation of unneeded packages in CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,7 +286,7 @@ jobs:
       - when:
           condition:
             not:
-              equal: [ ""master"", << parameters.uninstalls >> ]
+              equal: [ "", << parameters.uninstalls >> ]
           steps:
             - run:
                 name: Uninstall packages
@@ -328,7 +328,7 @@ jobs:
       - when:
           condition:
             not:
-              equal: [ ""master"", << parameters.uninstalls >> ]
+              equal: [ "", << parameters.uninstalls >> ]
           steps:
             - run:
                 name: Uninstall packages
